# gifyapper

./: .gitignore  README.md  flake.nix  pyproject.toml
src/gifyapper/: bubble.py  cli.py  compositor.py  preview.py
src/gifyapper/static/: preview.html
static/: preview.html
